--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,14 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-    implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation("com.squareup.retrofit2:converter-jackson:2.9.0")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    implementation("com.auth0:java-jwt:3.18.2")
+    implementation("org.springframework.boot:spring-boot-starter-security")
 }
 
 tasks.withType(KotlinCompile) {
