--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation("com.auth0:java-jwt:3.18.2")
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-websocket")
+    implementation("com.github.sritejakv:splitwise:1.0")
 }
 
 tasks.withType(KotlinCompile) {
